Testing added and code coveraged added to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ matrix:
     - os: osx
       r: release
 
+after_success:
+    - Rscript -e 'covr::codecov()'
+    
 sudo: false
 
 cache: packages
